--- a/ImagesLab/ImagesLab/Base.lproj/Main.storyboard
+++ b/ImagesLab/ImagesLab/Base.lproj/Main.storyboard
@@ -114,6 +114,13 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5pb-Wv-CSZ">
+                                                    <rect key="frame" x="20" y="83" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wzC-Wa-OOS">
                                                     <rect key="frame" x="194" y="0.0" width="174" height="128"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -123,6 +130,8 @@
                                         <connections>
                                             <outlet property="pokemonCardImage" destination="wzC-Wa-OOS" id="Chy-bx-7tm"/>
                                             <outlet property="pokemonName" destination="mJV-zb-2Eu" id="vrt-gr-ds7"/>
+                                            <outlet property="weaknessesLabel" destination="5pb-Wv-CSZ" id="NsD-bv-ZfO"/>
+                                            <segue destination="hj8-jc-dhi" kind="show" identifier="segueToDetail" id="5uH-4N-QaP"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -145,6 +154,46 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PIu-RO-i4p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1866.6666666666667" y="910.71428571428567"/>
+        </scene>
+        <!--Detail Pokemon View Controller-->
+        <scene sceneID="6fY-j0-gPu">
+            <objects>
+                <viewController id="hj8-jc-dhi" customClass="detailPokemonViewController" customModule="ImagesLab" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hUv-Vs-uKg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Weaknesses" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mto-a0-ta0">
+                                <rect key="frame" x="38" y="622" width="338" height="62"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7xj-ML-Z7x">
+                                <rect key="frame" x="73" y="135" width="268" height="386"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9BQ-hT-Y0r">
+                                <rect key="frame" x="20" y="529" width="374" height="63"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ijE-FS-izw"/>
+                    </view>
+                    <connections>
+                        <outlet property="cardImage" destination="7xj-ML-Z7x" id="shZ-r2-axs"/>
+                        <outlet property="nameLabel" destination="9BQ-hT-Y0r" id="Ea6-hZ-K7Q"/>
+                        <outlet property="weaknessLabel" destination="mto-a0-ta0" id="C1I-5h-r9p"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fLL-0Z-1DM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2773.913043478261" y="910.71428571428567"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yBN-Lx-taR">
