--- a/ImagesLab/ImagesLab/Base.lproj/Main.storyboard
+++ b/ImagesLab/ImagesLab/Base.lproj/Main.storyboard
@@ -230,6 +230,7 @@
                     <connections>
                         <segue destination="P66-rF-2WW" kind="relationship" relationship="viewControllers" id="WMF-lr-smy"/>
                         <segue destination="6OM-Bb-3Ju" kind="relationship" relationship="viewControllers" id="JP3-J1-vME"/>
+                        <segue destination="1Ze-Zm-Y5J" kind="relationship" relationship="viewControllers" id="K60-9t-Jd4"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jSF-Lf-Wfv" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -254,6 +255,87 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d0h-Zr-58a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="958" y="911"/>
+        </scene>
+        <!--Users-->
+        <scene sceneID="6Vm-y2-cLJ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1Ze-Zm-Y5J" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Users" id="edc-az-AjX"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="O85-iv-UQl">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="SdE-xl-FsZ" kind="relationship" relationship="rootViewController" id="918-Wd-CDv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TTc-1G-wts" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="958" y="1853"/>
+        </scene>
+        <!--Users Table View Controller-->
+        <scene sceneID="rYV-YA-ee3">
+            <objects>
+                <tableViewController id="SdE-xl-FsZ" customClass="UsersTableViewController" customModule="ImagesLab" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="9TY-nL-XV5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="userCell" rowHeight="150" id="5a2-RB-bgw" customClass="UsersTableViewCell" customModule="ImagesLab" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="150"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5a2-RB-bgw" id="vMs-jc-SaJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="149.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v7S-Oc-MZw">
+                                            <rect key="frame" x="211" y="22" width="183" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zwk-fF-j6G">
+                                            <rect key="frame" x="211" y="64" width="183" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lBl-qA-SI8">
+                                            <rect key="frame" x="211" y="108" width="183" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MR5-hh-hAK">
+                                            <rect key="frame" x="33" y="4" width="140" height="140"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="ageLabel" destination="Zwk-fF-j6G" id="mfB-OC-eqG"/>
+                                    <outlet property="nameLabel" destination="v7S-Oc-MZw" id="TSD-cG-X1Q"/>
+                                    <outlet property="phoneLabel" destination="lBl-qA-SI8" id="46i-wQ-bzH"/>
+                                    <outlet property="profilePicture" destination="MR5-hh-hAK" id="BBN-DX-1Ab"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="SdE-xl-FsZ" id="ir4-Oc-N2d"/>
+                            <outlet property="delegate" destination="SdE-xl-FsZ" id="OA7-Lf-7BT"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="qTF-hZ-2HX"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L6E-oC-os6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1866.6666666666667" y="1852.9017857142856"/>
         </scene>
     </scenes>
 </document>
